<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/parental_control_share"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center" >

    <RelativeLayout
        android:layout_width="540dp"
        android:layout_height="136dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <ImageView
            android:layout_width="97dp"
            android:layout_height="97dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:background="@drawable/picturefile_icon" />

        <TextView
            android:id="@+id/picture_share"
            android:layout_width="420dp"
            android:layout_height="136dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:background="@drawable/share_button_style"
            android:gravity="center"
            android:soundEffectsEnabled="false"
            android:text="@string/share_picture"
            android:textColor="#ffffff"
            android:textSize="100sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="540dp"
        android:layout_height="136dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp" >

        <ImageView
            android:layout_width="97dp"
            android:layout_height="97dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:background="@drawable/musicfile_icon" />

        <TextView
            android:id="@+id/music_share"
            android:layout_width="420dp"
            android:layout_height="136dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/share_button_style"
            android:gravity="center"
            android:soundEffectsEnabled="false"
            android:text="@string/share_music"
            android:textColor="#ffffff"
            android:textSize="100sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="540dp"
        android:layout_height="136dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp" >

        <ImageView
            android:layout_width="97dp"
            android:layout_height="97dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:soundEffectsEnabled="false"
            android:background="@drawable/videofile_icon" />

        <TextView
            android:id="@+id/video_share"
            android:layout_width="420dp"
            android:layout_height="136dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:background="@drawable/share_button_style"
            android:gravity="center"
            android:soundEffectsEnabled="false"
            android:text="@string/share_video"
            android:textColor="#ffffff"
            android:textSize="100sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>